--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,14 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>5.11.2</version>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
